added some new features...